Implementacion de pruebas unitarias con IA, depuracion y analisis de calidad con sonarqube